[package]
name = "snowpack"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Authenticated encrypted transport for inter-node links, built on the Noise XX protocol"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rimasu/snowpack"
keywords = ["noise", "encryption", "authentication", "p2p", "cluster"]
categories = ["network-programming", "cryptography", "authentication"]

[dependencies]
ed25519-dalek = { workspace = true }
rand_core = { workspace = true }
serde = { workspace = true }
postcard = { workspace = true }
thiserror = { workspace = true }
secrecy = { workspace = true }
hex = { workspace = true }
snow = { workspace = true }
tokio = { workspace = true, features = ["net", "io-util", "time"] }
 
[dev-dependencies]
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
 
