[package]
name = "snowpack"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Authenticated encrypted transport for inter-node links, built on the Noise XX protocol"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rimasu/snowpack"
keywords = ["noise", "encryption", "authentication", "p2p", "cluster"]
categories = ["network-programming", "cryptography", "authentication"]

[dependencies]
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand_core = { version = "0.6", features = ["getrandom"] }
serde = { version = "1", features = ["derive"] }
postcard = { version = "1", features = ["alloc", "use-std"] }
thiserror = "2"
secrecy = { version = "0.8", features = ["serde"] }
hex = "0.4"
snow = { version = "0.9", features = ["default-resolver"] }
tokio = { version = "1", default-features = false, features = ["net", "io-util", "time", "sync", "rt"] }
metrics = "0.24"
tracing = "0.1"

[dev-dependencies]
serde_json = "1"
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "macros"] }
