[package]
name = "snowpack"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
description = "Authenticated encrypted transport for inter-node links, built on the Noise XX protocol"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rimasu/snowpack"
keywords = ["noise", "encryption", "authentication", "p2p", "cluster"]
categories = ["network-programming", "cryptography", "authentication"]

[features]
default = ["serde"]
serde = ["dep:serde"]

[dependencies]
yatlv = { version = "2.0.0", default-features = false }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand_core = { version = "0.6", features = ["getrandom"] }
serde = { version = "1", features = ["derive"], optional = true }
thiserror = "2"
secrecy = { version = "0.8" }
hex = "0.4"
snow = { version = "0.9", features = ["default-resolver"] }
tokio = { version = "1", default-features = false, features = ["net", "io-util", "time", "sync", "rt"] }
metrics = "0.24"
tracing = "0.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "macros"] }

[[bench]]
name = "transport"
harness = false
